There was a very specific bug that some Users cannot run the Application. After some modification in the "build.gradle" issue is fixed.