@@ -6,7 +6,7 @@ plugins {
   id 'org.beryx.jlink' version '2.25.0'
 }
 
-group 'org.CE216'
+group 'ce216game'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -14,7 +14,7 @@ repositories {
 }
 
 ext {
-  junitVersion = '5.10.0'
+  junitVersion = '5.10.2'
 }
 
 sourceCompatibility = '21'
@@ -25,8 +25,8 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-  mainModule = 'org.ce216.gamecatalog'
-  mainClass = 'org.ce216.gamecatalog.UIManager'
+  mainModule = 'ce216game.demo'
+  mainClass = 'ce216game.demo.HelloApplication'
 }
 
 javafx {
@@ -34,16 +34,20 @@ javafx {
   modules = ['javafx.controls', 'javafx.fxml']
 }
 
+// Test bağımlılıkları
 dependencies {
-
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
   implementation files('libs/json-20250107.jar')
+  implementation 'org.json:json:20210307'
+
 }
 
 test {
-useJUnitPlatform()}
+  useJUnitPlatform()
+}
 
+// JLink yapılandırması
 jlink {
   imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
   options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
@@ -52,8 +56,15 @@ jlink {
   }
 }
 
+// JLink Zip dağıtımı
 jlinkZip {
   group = 'distribution'
 }
 
-sourceSets.main.resources.srcDirs = ["src/main/resources"]
+// JavaFX için JVM argümanlarını ekleyin
+tasks.withType(JavaExec) {
+  jvmArgs = [
+          '--module-path', configurations.runtimeClasspath.asPath,
+          '--add-modules', 'javafx.controls,javafx.fxml'
+  ]
+}
